--- a/.travis.yml
+++ b/.travis.yml
@@ -1,2 +1,8 @@
 osx_image: xcode8
 language: objective-c
+
+script:
+- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-iOSTests -sdk iphonesimulator
+- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-iOS -sdk iphonesimulator
+- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-MacTests -sdk iphonesimulator
+- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-Mac -sdk iphonesimulator
