--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,10 @@ osx_image: xcode10.2
 language: objective-c
 
 script:
-- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-iOSTests -sdk iphonesimulator12.2 -destination "OS=12.2,name=iPhone X"
-- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-iOS -sdk iphonesimulator12.2
-- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-MacTests -sdk macosx10.14 -destination "arch=x86_64"
-- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-Mac -sdk macosx10.14
+- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-iOSTests -destination "name=iPhone X"
+- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-iOS
+- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-macOSTests -destination "arch=x86_64"
+- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-macOS 
+- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-watchOS
+- xcodebuild test -project SwiftColor.xcodeproj -scheme SwiftColor-tvOSTests -destination "name=Apple TV"
+- xcodebuild clean build -project SwiftColor.xcodeproj -scheme SwiftColor-tvOS
